# btlrunRepo

./: .env.example  .gitignore  ARCHITECTURE.md  Claude.md  DEPLOYMENT-CHECKLIST.md  DOMAIN-SETUP.md  INTEGRATION.md  README.md  SETUP.md  STATUS.md  bucket-policy.json
.cursor/_lessons_learned/: README.md  _TEMPLATE.md
.cursor/agents/: api-verifier.md  cdk-reviewer.md  code-cleanup.md  event-debugger.md  frontend-perf.md  game-engine-tester.md  game-tester.md  long-play-scheduler.md  production-deployer.md  production-readiness-tester.md  sam-reviewer.md  schema-validator.md  security-auditor.md  ui-implementer.md
.cursor/rules/: 00-overview.mdc  10-architecture.mdc  20-standards.mdc  30-security.mdc  35-uiux-mocks.mdc  36-uiux-app-development-consistency.mdc  40-ai.mdc  45-push-notifications.mdc  50-infrastructure.mdc  60-local-development.mdc  70-lessons-learned.mdc  80-documentation.mdc  general.mdc  rust-lambda.mdc
AskAi_KVS/: .env.example  QUICK-REFERENCE.md  README.md  package.json
AskAi_KVS/examples/: api-handler.ts  basic-usage.ts  cdk-infrastructure.ts
assets/: README.md
backend/: Cargo.toml
backend/functions/api/: Cargo.toml
backend/functions/api/src/: main.rs
backend/shared/: Cargo.toml
backend/shared/src/: lib.rs
docs/: README.md
frontend/: .env.example  index.html  package.json  tsconfig.json  vite.config.ts
infrastructure/: samconfig.toml  template.yaml
scripts/: build-backend.ps1  build-frontend.ps1  build-services.ps1  deploy-mocks.ps1  deploy-stack.ps1  deploy.ps1  setup-openai-secret.ps1  setup-vapid-keys.ps1
(+142 files in other folders)
