[workspace]
resolver = "2"
members = [
    "functions/api",
    "shared"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["btl.run team"]
license = "MIT"

[workspace.dependencies]
# Lambda runtime
lambda_http = "0.13"
lambda_runtime = "0.13"

# Async runtime
tokio = { version = "1", features = ["macros"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Internal crates
shared = { path = "shared" }
